# drawings

./: .gitignore  .travis.yml  README.md  _config.yml  index.html  params.json  preview.sh
_includes/: footer.html  (+1 more)
engine/: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  ci.sh  configtool  configure  format.sh  go-cfg  override.sed
engine/include/rey/: rey
engine/include/ttl/bits/: low_rank_tensor.hpp  std_fixed_shape.hpp
engine/include/ttl/experimental/: low_rank_tensor
engine/install/: chunk.py  pack.sh
engine/script/: master.sh  worker.sh
engine/src/apps/: configure
engine/src/apps/bb8/: bb8_main.cpp  bb8_model.cpp  bb8_model.h
engine/src/apps/billiard/: billiard_main.cpp
engine/src/apps/builtin/: builtin_examples.cpp  builtin_examples.h  builtin_examples_main.cpp
engine/src/apps/example1/: Makefile.am  bb8_model.cpp  example_main.cpp  examples.cpp  examples.h  r2d2_model.cpp
engine/src/apps/r2d2/: r2d2_main.cpp  r2d2_model.cpp  r2d2_model.h
engine/src/apps/ray/: debug.cpp  debug.h  display.h  example_main.cpp  examples.cpp  examples.h  params.cpp  params.h  params_test.cpp  render.cpp
engine/src/apps/render/: render_main.cpp
engine/src/apps/server/: server_main.cpp
engine/src/modules/: configure  dep
engine/src/modules/arith/: arith.cpp  arith.h  si.h
engine/src/modules/base/: app.cpp  app.h  config.h  config_test.cpp  debug.cpp  debug.h  guard.cpp  guard.h  maybe.h  maybe_test.cpp  params.cpp  params.h  params_test.cpp  task.cpp  task.h  utils.h
engine/src/modules/bmp/: bmp.cpp  bmp.h  bmp_test.cpp
engine/src/modules/lang/: constants.cpp  constants.h  parse.h  prog.cpp  prog.h  prog_test.cpp
engine/src/modules/linear/: affine.cpp  affine.h  affine_test.cpp  arith.cpp  arith.h  arith_test.cpp  linear-geo-3.cpp  linear-geo-3.h  linear-geo-3_test.cpp  linear.cpp  linear.h  linear_test.cpp  point.cpp  point.h  point_impl_macro.h  point_impl_tpl.h  point_test.cpp  tuple-2.h  tuple-3.h  tuple-4.h  tuple.h
engine/src/modules/logger/: logger.cpp  logger.h  logger_test.cpp
engine/src/modules/model/: color.cpp  color.h  model-builtin.h  model.cpp  model.h  model_surface.cpp  model_surface.h  model_surface_test.cpp  model_test.cpp  polyhedron.cpp  polyhedron.h  polyhedron_test.cpp  primitives.cpp  primitives.h  primitives_test.cpp  solids.cpp  solids.h  solids_test.cpp  view.cpp  view.h  view_test.cpp
engine/src/modules/optics/: color.cpp  color.h  color_test.cpp  material.cpp  material.h  material_test.cpp
engine/src/modules/parallel/: Makefile.am  client.go  client_cli.go  http.cpp  http.h  parallel.cpp  parallel.h  render_request.go  server.cpp  server.go  server.h
engine/src/modules/point/: point.cpp  point.h  point_impl_macro.h  point_test.cpp  tuple.h
engine/src/modules/profile/: profile.cpp  profile.h
engine/src/modules/ray/: display.cpp  display.h  display_test.cpp  ray.cpp  ray.h  rey.h
engine/src/modules/testing/: testing.cpp  testing.h
engine/src/rey/: configure  rey
engine/tests/: all-tests.sh  benchmark.sh  run-unit-tests.sh
engine/tests/bb8/: all.sh  b1.sh  b2.sh  bb8-test.sh
engine/tests/builtin/: all.sh  b1.sh  builtin-model-test.sh  cy-1.sh  cy-2.sh  cy-3.sh  m1.sh  m2.sh  m3.sh  m4.sh  m5.sh  m6.sh  p1.sh  s1.sh  single-model-test.sh
engine/tests/examples/: all.sh  billiard.sh  e1.sh  r2d2-bb8.sh  tr.01.sh
engine/tests/r2d2/: all.sh  r2d2-1.sh  r2d2-test.sh
engine/tests/render/: all.sh  render-test.sh  t1.sh  t2.sh  t3.sh  t4.sh
engine/tests/server/: s1.sh
(+184 files in other folders)
